# dbt-core

./: README.md  pyproject.toml
northwind/: dbt_project.yml
northwind/models/marts/: vendas.sql
northwind/models/staging/crm/: stg_crm__nova_tabela.sql
northwind/seeds/: nova_tabela.csv  region.csv
